WhiteBoard Bug Fixed

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,8 @@
                         <button class="py-2 px-4 hover:bg-blue-100" onclick='handleJoinMeeting()'>Join</button>
                     </div>
                 </div>
-                <div><a href="/" class="text-blue-600 underline">Learn more</a> about Google Meet</div>
+                <div><a href="https://meet.google.com/about/redirect/landing-learn-more/?hl=en_GB"
+                        class="text-blue-600 underline">Learn more</a> about Google Meet</div>
             </div>
             <div class="flex flex-col flex-nowrap justify-center gap-6">
                 <img src="https://www.gstatic.com/meet/user_edu_safety_light_e04a2bbb449524ef7e49ea36d5f25b65.svg"
